# ModalCorrespondence

./: .gitignore  LICENSE  ModalCorrespondence.cabal  README.md  package.yaml  stack.yaml
old/: E2.hs  GraphExamples.hs  SQ_shape.hs
src/: FOLCorrespondent.hs  FOLSimplify.hs  GraphTest.hs  Instantiation.hs  Languages.hs  Lex.x  Main.hs  MakeViz.hs  ModalSimplify.hs  Parse.y  SQ_shape.hs  SahlqvistCheck.hs  StandTrans.hs  Stand_trans.hs  Token.hs  UniformFOLCorr.hs  VsimpleSq.hs
test/: examples.hs
web/: .gitignore  Main.hs  Makefile  app.cabal
