name:                app
version:             0.1.0.0
synopsis:            Simple web interface for modal correspondence.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:
    .
    src/
  build-tools:
    alex, happy
  main-is:
    Main.hs
  other-modules:
    FOLCorrespondent
    FOLSimplify
    Instantiation
    Languages
    Lex
    ModalSimplify
    Parse
    SahlqvistCheck
    StandTrans
    Token
  build-depends:
    array, base, graphviz, miso, temporary, text
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  default-language:
     Haskell2010
